--- a/style/global.css
+++ b/style/global.css
@@ -59,3 +59,34 @@ textarea {
   min-height: 4rem;
   resize: vertical;
 }
+
+.toast {
+  background-color: var(--fg);
+  border-radius: 0.5rem;
+  border-style: solid;
+  bottom: -10rem;
+  color: var(--bg);
+  line-height: 1.3;
+  max-width: 20rem;
+  padding: 0.75rem 1.25rem;
+  position: fixed;
+  right: 1.25rem;
+  transition-duration: 250ms;
+  transition-property: bottom, right;
+  transition-timing-function: cubic-bezier(0.75, -0.75, 0.25, 1.5);
+  z-index: 10;
+}
+
+.toast.enter {
+  bottom: 1.25rem;
+}
+
+.toast.exit {
+  right: -20rem;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .toast {
+    transition-duration: 0ms;
+  }
+}
