--- a/style/global.css
+++ b/style/global.css
@@ -32,7 +32,7 @@ label {
   display: flex;
   flex-direction: column;
   font-size: 0.875rem;
-  width: min(100%, 30rem);
+  width: 100%;
 }
 
 input,
