--- a/style/global.css
+++ b/style/global.css
@@ -54,6 +54,7 @@ select {
 }
 
 textarea {
+  font: inherit;
   max-height: 8rem;
   min-height: 4rem;
   resize: vertical;
@@ -97,6 +98,7 @@ textarea {
 .spinner {
   animation: 1.25s linear spinner infinite;
   height: 2rem;
+  margin-block: 1rem;
   width: 2rem;
 }
 
@@ -118,24 +120,26 @@ textarea {
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  gap: 1.25rem;
+  gap: 0.75rem;
   justify-content: center;
 }
 
 .score-container li {
   align-items: center;
-  background-color: color-mix(in oklab, var(--gray) 10%, transparent);
+  background-color: color-mix(in oklab, var(--gray) 20%, transparent);
   border-radius: 1.25rem;
   display: flex;
   flex-direction: column;
   padding: 0.75rem 1.25rem;
+  width: 9rem;
 }
 
 .score-container li > span:first-child {
-  font-size: 2rem;
+  font-size: 1.125rem;
 }
 .score-container li > div {
-  font-size: 1.5rem;
+  font-size: 1.375rem;
+  font-weight: 700;
 }
 
 .red-text {
@@ -144,7 +148,6 @@ textarea {
 
 .search-container {
   margin-inline: auto;
-  max-width: 30rem;
 }
 
 .search-container ul {
