--- a/style/global.css
+++ b/style/global.css
@@ -1,3 +1,7 @@
+html:has(dialog[open]) {
+  overflow: hidden;
+}
+
 footer > div:first-child {
   font-size: 1.5rem;
   gap: 1.25rem;
@@ -58,6 +62,39 @@ textarea {
   max-height: 8rem;
   min-height: 4rem;
   resize: vertical;
+}
+
+dialog {
+  border-radius: 1rem;
+  border-style: solid;
+  margin: 20vh auto;
+  padding: 0;
+  width: min(calc(100vw - 2.5rem), 30rem);
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+dialog,
+dialog > div {
+  border-radius: 1rem;
+}
+
+dialog > div {
+  padding: 1.25rem;
+}
+
+dialog h1 {
+  font-size: 1.125rem;
+  text-align: left;
+}
+
+.dialog-button-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.25rem 1.25rem;
+  justify-content: flex-end;
 }
 
 .toast {
