--- a/style/global.css
+++ b/style/global.css
@@ -159,24 +159,35 @@ dialog h1 {
   margin-block: 0.5rem 1.25rem;
 }
 
-.lobby ul {
+.lobby ul,
+.waiting-room ul {
   border-block-start: 1px solid var(--slate);
 }
 
-.lobby ul li {
+.lobby ul li,
+.waiting-room ul li {
   align-items: center;
   border-block-end: 1px solid var(--slate);
   display: flex;
   gap: 1.25rem;
   justify-content: space-between;
-  padding-block: 0.25rem;
+  padding-block: 0.5rem;
 }
 
-.lobby ul li span {
+.lobby ul li span,
+.waiting-room ul li span {
   font-size: 1.125rem;
   font-weight: 600;
 }
 
+.waiting-room ul li div:last-child {
+  display: flex;
+  column-gap: 1rem;
+  flex-wrap: wrap-reverse;
+  white-space: nowrap;
+}
+
+.waiting-room,
 .request-to-join-form {
   display: flex;
   flex-direction: column;
