--- a/style/global.css
+++ b/style/global.css
@@ -233,24 +233,20 @@ dialog h1 {
   color: var(--red);
 }
 
-.search-container {
-  margin-inline: auto;
-}
-
 .search-container ul {
   align-items: center;
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
   justify-content: center;
 }
 
 .search-container ul li {
+  align-items: center;
   border-block-end: 1px solid var(--slate);
   display: flex;
   gap: 1.25rem;
   justify-content: space-between;
-  padding-block-end: 0.75rem;
+  padding-block: 0.5rem;
   width: 100%;
 }
 
