--- a/style/global.css
+++ b/style/global.css
@@ -232,6 +232,10 @@ dialog h1 {
   color: var(--red);
 }
 
+.search-container {
+  margin-block-end: 0.75rem;
+}
+
 .search-container ul {
   align-items: center;
   display: flex;
@@ -254,36 +258,39 @@ dialog h1 {
   flex-direction: column;
 }
 
-.game-action-container {
-  border-radius: 0.75rem;
-  margin-block: 0.75rem;
-  padding: 0.5rem 1.25rem;
-  text-align: center;
-}
-
 .game-rounds {
-  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   margin-block: 1.25rem;
-  padding: 1.25rem;
-  position: relative;
 }
 
-.game-rounds p:not(:last-child) {
-  border-block-end: 1px solid color-mix(in oklab, var(--slate) 50%, transparent);
-  margin-block-end: 0.75rem;
-  padding-block: 0.5rem;
+.round-box {
+  border-radius: 8px;
+  padding-inline: 0.75rem;
 }
 
-.score-container li,
-.game-action-container,
-.game-rounds {
+.round-entries {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem 0.25rem;
+}
+
+.round-entry {
+  background-color: color-mix(in oklab, var(--fg) 75%, transparent);
+  color: var(--bg);
+  padding: 0.375rem 0.75rem;
+  border-radius: 0.5rem;
+  font-size: 0.875rem;
+}
+
+.score-container li {
   background-color: color-mix(in oklab, var(--gray) 10%, transparent);
   position: relative;
 }
 
-.score-container li::before,
-.game-action-container::before,
-.game-rounds::before {
+.score-container li::before {
   background: radial-gradient(
     circle at top right,
     color-mix(in oklab, var(--gray) 15%, transparent),
