--- a/style/global.css
+++ b/style/global.css
@@ -22,6 +22,7 @@ button {
   justify-content: center;
   min-height: 2rem;
   min-width: 2rem;
+  width: max-content;
 }
 
 button {
@@ -155,6 +156,10 @@ dialog h1 {
   }
 }
 
+.page-content {
+  display: grid;
+}
+
 .lobby .btn {
   margin-block: 0.5rem 1.25rem;
 }
@@ -226,6 +231,7 @@ dialog h1 {
   color: var(--light);
   font-weight: 600;
   padding: 0.5rem 1rem;
+  width: 100%;
 }
 
 .red-text {
