--- a/style/global.css
+++ b/style/global.css
@@ -109,38 +109,13 @@ dialog h1 {
   justify-content: flex-end;
 }
 
-.toast {
-  background-color: var(--fg);
-  border-radius: 0.5rem;
-  border-style: solid;
-  bottom: -10rem;
-  color: var(--bg);
+htm-toast {
   line-height: 1.3;
-  max-width: 20rem;
-  padding: 0.75rem 1.25rem;
-  position: fixed;
-  right: 1.25rem;
-  transition-duration: 250ms;
-  transition-property: bottom, right;
-  transition-timing-function: cubic-bezier(0.75, -0.75, 0.25, 1.5);
-  z-index: 10;
-}
-
-.toast.enter {
-  bottom: 1.25rem;
-}
-
-.toast.exit {
-  right: -20rem;
 }
 
 @media (prefers-reduced-motion: reduce) {
   .spinner {
     display: none;
-  }
-
-  .toast {
-    transition-duration: 0ms;
   }
 }
 
